Fixed static method calls and JDK configuration