@@ -7,15 +7,15 @@ import models.EnvData;
 
 @UtilityClass
 public class EnvDataReader {
-    private final String ENVIRONMENT_PATH = JsonReader.RESOURCES_PATH + "environment/";
-    private final ISettingsFile ENVIRONMENT_CONFIG = new JsonSettingsFile("env.json");
+    private static final String ENVIRONMENT_PATH = JsonReader.getResourcesPath() + "environment/";
+    private static final ISettingsFile ENVIRONMENT_CONFIG = new JsonSettingsFile("env.json");
 
-    private String getCurrentEnvironment() {
+    private static String getCurrentEnvironment() {
         return ENVIRONMENT_CONFIG.getValue("/env").toString();
     }
 
-    public EnvData getEnvData() {
-        String envConfigPath = "%s%s.json".formatted(ENVIRONMENT_PATH, getCurrentEnvironment());
+    public static EnvData getEnvData() {
+        String envConfigPath = String.format("%s%s.json", ENVIRONMENT_PATH, getCurrentEnvironment());
         return JsonReader.deserializeJson(envConfigPath, EnvData.class);
     }
 }
